// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full e2e test > of publish > github release creation of all packages 1`] = `
{
  "commandsRan": {
    "package-one": {
      "command": "## \\[2.3.1]

- Added some cool things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-one",
        "pkg": "package-one",
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-one",
  "description": "shrugs",
  "version": "2.3.1",
  "license": "MIT",
  "scripts": {
    "build": "npm info tauri@0.8.0 description",
    "test": "npm info covector@0.1.0 license"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-one/package.json",
          },
          "name": "package-one",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "package-one-v2.3.1",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-two": {
      "command": "## \\[1.9.0]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-two",
        "pkg": "package-two",
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-two",
  "description": "shrugs",
  "version": "1.9.0",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-two/package.json",
          },
          "name": "package-two",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "package-two-v1.9.0",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
  },
  "pipeTemplate": {
    "package-one": {
      "name": "package-one",
      "pipe": {
        "pkg": {
          "changelog": "## \\[2.3.1]

- Added some cool things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "name": "package-one",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
        },
      },
    },
    "package-two": {
      "name": "package-two",
      "pipe": {
        "pkg": {
          "changelog": "## \\[1.9.0]

- Added some even cooler things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "name": "package-two",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`full e2e test > of publish > github release creation of single package 1`] = `
{
  "commandsRan": {
    "package-one": {
      "command": "## \\[2.3.1]

- Added some cool things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-one",
        "pkg": "package-one",
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-one",
  "version": "2.3.1",
  "license": "MIT",
  "scripts": {
    "build": "npm info tauri@0.8.0 description",
    "test": "npm info covector@0.1.0 license"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-one/package.json",
          },
          "name": "package-one",
          "pkg": {
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "v2.3.1",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-three": {
      "command": "## \\[0.7.5]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-three",
        "pkg": "package-three",
        "pkgFile": {
          "currentVersion": "0.7.5",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-three",
  "version": "0.7.5",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-three/package.json",
          },
          "name": "package-three",
          "pkg": {
            "license": "MIT",
            "name": "package-three",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "0.7.5",
          },
          "version": "0.7.5",
          "versionMajor": 0,
          "versionMinor": 7,
          "versionPatch": 5,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": false,
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-two": {
      "command": "## \\[1.9.0]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-two",
        "pkg": "package-two",
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-two",
  "version": "1.9.0",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-two/package.json",
          },
          "name": "package-two",
          "pkg": {
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": false,
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
  },
  "pipeTemplate": {
    "package-one": {
      "name": "package-one",
      "pipe": {
        "pkg": {
          "changelog": "## \\[2.3.1]

- Added some cool things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "postcommand": null,
          "precommand": null,
          "releaseTag": "v\${ pkgFile.version }",
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "name": "package-one",
          "pkg": {
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
        },
      },
    },
    "package-three": {
      "name": "package-three",
      "pipe": {
        "pkg": {
          "changelog": "## \\[0.7.5]

- Added some even cooler things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-three",
          "pkg": "package-three",
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.7.5",
          "deps": {},
          "name": "package-three",
          "pkg": {
            "license": "MIT",
            "name": "package-three",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "0.7.5",
          },
          "version": "0.7.5",
          "versionMajor": 0,
          "versionMinor": 7,
          "versionPatch": 5,
        },
      },
    },
    "package-two": {
      "name": "package-two",
      "pipe": {
        "pkg": {
          "changelog": "## \\[1.9.0]

- Added some even cooler things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "name": "package-two",
          "pkg": {
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`full e2e test > of publish > github release update of all packages 1`] = `
{
  "commandsRan": {
    "package-one": {
      "command": "## \\[2.3.1]

- Added some cool things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-one",
        "pkg": "package-one",
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-one",
  "description": "shrugs",
  "version": "2.3.1",
  "license": "MIT",
  "scripts": {
    "build": "npm info tauri@0.8.0 description",
    "test": "npm info covector@0.1.0 license"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-one/package.json",
          },
          "name": "package-one",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "package-one-v2.3.1",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-two": {
      "command": "## \\[1.9.0]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-two",
        "pkg": "package-two",
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-two",
  "description": "shrugs",
  "version": "1.9.0",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-two/package.json",
          },
          "name": "package-two",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "package-two-v1.9.0",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
  },
  "pipeTemplate": {
    "package-one": {
      "name": "package-one",
      "pipe": {
        "pkg": {
          "changelog": "## \\[2.3.1]

- Added some cool things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "name": "package-one",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
        },
      },
    },
    "package-two": {
      "name": "package-two",
      "pipe": {
        "pkg": {
          "changelog": "## \\[1.9.0]

- Added some even cooler things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "name": "package-two",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`full e2e test > of publish > github release update of single package 1`] = `
{
  "commandsRan": {
    "package-one": {
      "command": "## \\[2.3.1]

- Added some cool things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-one",
        "pkg": "package-one",
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-one",
  "version": "2.3.1",
  "license": "MIT",
  "scripts": {
    "build": "npm info tauri@0.8.0 description",
    "test": "npm info covector@0.1.0 license"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-one/package.json",
          },
          "name": "package-one",
          "pkg": {
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "v2.3.1",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-three": {
      "command": "## \\[0.7.5]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-three",
        "pkg": "package-three",
        "pkgFile": {
          "currentVersion": "0.7.5",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-three",
  "version": "0.7.5",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-three/package.json",
          },
          "name": "package-three",
          "pkg": {
            "license": "MIT",
            "name": "package-three",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "0.7.5",
          },
          "version": "0.7.5",
          "versionMajor": 0,
          "versionMinor": 7,
          "versionPatch": 5,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": false,
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-two": {
      "command": "## \\[1.9.0]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
          [Function],
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-two",
        "pkg": "package-two",
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-two",
  "version": "1.9.0",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-two/package.json",
          },
          "name": "package-two",
          "pkg": {
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": false,
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
  },
  "pipeTemplate": {
    "package-one": {
      "name": "package-one",
      "pipe": {
        "pkg": {
          "changelog": "## \\[2.3.1]

- Added some cool things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "postcommand": null,
          "precommand": null,
          "releaseTag": "v\${ pkgFile.version }",
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "name": "package-one",
          "pkg": {
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
        },
      },
    },
    "package-three": {
      "name": "package-three",
      "pipe": {
        "pkg": {
          "changelog": "## \\[0.7.5]

- Added some even cooler things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-three",
          "pkg": "package-three",
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "0.7.5",
          "deps": {},
          "name": "package-three",
          "pkg": {
            "license": "MIT",
            "name": "package-three",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "0.7.5",
          },
          "version": "0.7.5",
          "versionMajor": 0,
          "versionMinor": 7,
          "versionPatch": 5,
        },
      },
    },
    "package-two": {
      "name": "package-two",
      "pipe": {
        "pkg": {
          "changelog": "## \\[1.9.0]

- Added some even cooler things.
",
          "command": [
            {
              "command": "echo publish",
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "postcommand": null,
          "precommand": null,
          "releaseTag": false,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "name": "package-two",
          "pkg": {
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`full e2e test > of publish > input 1`] = `
{
  "covectoredAction": {
    "commandsRan": {
      "package-one": {
        "command": "## \\[2.3.1]

- Added some cool things.

publish
",
        "pkg": {
          "command": [
            {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "pkgFile": {
            "currentVersion": "2.3.1",
            "deps": {},
            "file": {
              "content": "{
  "name": "package-one",
  "description": "shrugs",
  "version": "2.3.1",
  "license": "MIT",
  "scripts": {
    "build": "npm info tauri@0.8.0 description",
    "test": "npm info covector@0.1.0 license"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-one/package.json",
            },
            "name": "package-one",
            "pkg": {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-one-v2.3.1",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
      "package-two": {
        "command": "## \\[1.9.0]

- Added some even cooler things.

publish
",
        "pkg": {
          "command": [
            {
              "command": "echo publish",
              "dryRunCommand": undefined,
              "pipe": true,
            },
            [Function],
          ],
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "pkgFile": {
            "currentVersion": "1.9.0",
            "deps": {},
            "file": {
              "content": "{
  "name": "package-two",
  "description": "shrugs",
  "version": "1.9.0",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
              "extname": ".json",
              "filename": "package",
              "path": "packages/package-two/package.json",
            },
            "name": "package-two",
            "pkg": {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
            "versionPrerelease": null,
          },
          "postcommand": null,
          "precommand": null,
          "releaseTag": "package-two-v1.9.0",
        },
        "postcommand": false,
        "precommand": false,
        "published": true,
      },
    },
    "pipeTemplate": {
      "package-one": {
        "name": "package-one",
        "pipe": {
          "pkg": {
            "changelog": "## \\[2.3.1]

- Added some cool things.
",
            "command": [
              {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-one",
            "pkg": "package-one",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": {
            "currentVersion": "2.3.1",
            "deps": {},
            "name": "package-one",
            "pkg": {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-one",
              "scripts": {
                "build": "npm info tauri@0.8.0 description",
                "test": "npm info covector@0.1.0 license",
              },
              "version": "2.3.1",
            },
            "version": "2.3.1",
            "versionMajor": 2,
            "versionMinor": 3,
            "versionPatch": 1,
          },
        },
      },
      "package-two": {
        "name": "package-two",
        "pipe": {
          "pkg": {
            "changelog": "## \\[1.9.0]

- Added some even cooler things.
",
            "command": [
              {
                "command": "echo publish",
                "pipe": true,
              },
              [Function],
            ],
            "dependencies": undefined,
            "errorOnVersionRange": null,
            "manager": "javascript",
            "path": "./packages/package-two",
            "pkg": "package-two",
            "postcommand": null,
            "precommand": null,
            "releaseTag": null,
            "tag": "",
          },
          "pkgFile": {
            "currentVersion": "1.9.0",
            "deps": {},
            "name": "package-two",
            "pkg": {
              "description": "shrugs",
              "license": "MIT",
              "name": "package-two",
              "scripts": {
                "build": "echo this command is not piped, it is run from scripts for pk2",
                "test": "echo this command is not piped, it is run from the test script",
              },
              "version": "1.9.0",
            },
            "version": "1.9.0",
            "versionMajor": 1,
            "versionMinor": 9,
            "versionPatch": 0,
          },
        },
      },
    },
  },
}
`;

exports[`full e2e test > of publish > output 1`] = `
{
  "commandsRan": {
    "package-one": {
      "command": "## \\[2.3.1]

- Added some cool things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-one",
        "pkg": "package-one",
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-one",
  "description": "shrugs",
  "version": "2.3.1",
  "license": "MIT",
  "scripts": {
    "build": "npm info tauri@0.8.0 description",
    "test": "npm info covector@0.1.0 license"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-one/package.json",
          },
          "name": "package-one",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "package-one-v2.3.1",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
    "package-two": {
      "command": "## \\[1.9.0]

- Added some even cooler things.

publish
",
      "pkg": {
        "command": [
          {
            "command": "echo publish",
            "dryRunCommand": undefined,
            "pipe": true,
          },
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./packages/package-two",
        "pkg": "package-two",
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-two",
  "description": "shrugs",
  "version": "1.9.0",
  "license": "MIT",
  "scripts": {
    "build": "echo this command is not piped, it is run from scripts for pk2",
    "test": "echo this command is not piped, it is run from the test script"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "packages/package-two/package.json",
          },
          "name": "package-two",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
          "versionPrerelease": null,
        },
        "postcommand": null,
        "precommand": null,
        "releaseTag": "package-two-v1.9.0",
      },
      "postcommand": false,
      "precommand": false,
      "published": true,
    },
  },
  "pipeTemplate": {
    "package-one": {
      "name": "package-one",
      "pipe": {
        "pkg": {
          "changelog": "## \\[2.3.1]

- Added some cool things.
",
          "command": {
            "command": "echo publish",
            "pipe": true,
          },
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-one",
          "pkg": "package-one",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "2.3.1",
          "deps": {},
          "name": "package-one",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-one",
            "scripts": {
              "build": "npm info tauri@0.8.0 description",
              "test": "npm info covector@0.1.0 license",
            },
            "version": "2.3.1",
          },
          "version": "2.3.1",
          "versionMajor": 2,
          "versionMinor": 3,
          "versionPatch": 1,
        },
      },
    },
    "package-two": {
      "name": "package-two",
      "pipe": {
        "pkg": {
          "changelog": "## \\[1.9.0]

- Added some even cooler things.
",
          "command": {
            "command": "echo publish",
            "pipe": true,
          },
          "dependencies": undefined,
          "errorOnVersionRange": null,
          "manager": "javascript",
          "path": "./packages/package-two",
          "pkg": "package-two",
          "postcommand": null,
          "precommand": null,
          "releaseTag": null,
          "tag": "",
        },
        "pkgFile": {
          "currentVersion": "1.9.0",
          "deps": {},
          "name": "package-two",
          "pkg": {
            "description": "shrugs",
            "license": "MIT",
            "name": "package-two",
            "scripts": {
              "build": "echo this command is not piped, it is run from scripts for pk2",
              "test": "echo this command is not piped, it is run from the test script",
            },
            "version": "1.9.0",
          },
          "version": "1.9.0",
          "versionMajor": 1,
          "versionMinor": 9,
          "versionPatch": 0,
        },
      },
    },
  },
}
`;

exports[`full e2e test > of version > outputs with changes 1`] = `undefined`;
